Image sratch issue #8353. Overflow hidden added (to handle  larger images )and height removed

--- a/public/less/frontend/components/products-v1.less
+++ b/public/less/frontend/components/products-v1.less
@@ -76,6 +76,7 @@
             font-size: 120px !important;
             .product-img {
                 display: block;
+                overflow: :hidden;
             }
             i.fa{
                 color: #5b5b60;
@@ -95,7 +96,6 @@
         height: 180px;
         img {
             margin-right: 15px;
-            height: 180px;
             margin: 0 auto;
         }
     }
